@@ -42,6 +42,9 @@
     "Force a more verbose display of expression (XML like), where one can\n",
     "actually see the nesting of the structures.\n",
     "\n",
+    "### VCSN_PYTHONDIR\n",
+    "The python directory.\n",
+    "\n",
     "### VCSN_SEED\n",
     "Disable the generation of a random seed, stick to the compile-time\n",
     "default seed.\n",
@@ -333,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
